containers/Skills/skills.module.scss
@use '../../styles/breakpoint.scss' as *;

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: calc(100vh - 60px);
  padding-right: 30px;
  padding-left: 30px;
  .box {
    max-width: 800px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    .icon {
      width: 120px;
      height: 120px;
      &:not(:first-child) {
        margin-left: 30px;
      }
      margin-top: 30px;
      svg {
        width: 100%;
        height: 100%;
        path {
          fill: var(--white);
          width: 100%;
          height: 100%;
        }
      }
      &:hover {
        svg {
          path {
            fill: var(--main-color);
            transition: fill 0.25s;
          }
        }
      }
    }
  }
  @media screen and (max-width: $maxWidthSmallMobile) {
    .box {
      justify-content: space-around;
      .icon {
        width: 100px;
        height: 100px;
      }
    }
  }
}

